Updates to the sample app to demonstrate local cache handling for sync adds, updates and deletes

--- a/app/src/main/res/layout/post.xml
+++ b/app/src/main/res/layout/post.xml
@@ -42,6 +42,14 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:text="Downs"/>
+        <TextView
+            android:id="@+id/deletePost"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:textAlignment="center"
+            android:text="Delete"
+            />
     </LinearLayout>
 
     <View
